<resources>
    <string name="app_name">Filmopedia</string>>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="register_now">Register Now</string>
    <string name="click_to_login">Click to Login</string>
    <string name="register">REGISTER</string>
    <string name="emaillog">Email</string>
    <string name="passwordlog">Password</string>
    <string name="login">LOGIN</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email1">Email</string>
    <string name="name">Username</string>
    <string name="y">y</string>
    <string name="favourites">Favourites</string>
    <string name="api_key">paste your api key here</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Favourites</string>
    <string name="search">Search</string>
    <string name="favourite">Favourites</string>

    <string-array name="Genres">
        <item></item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string-array name="Ratings">
        <item></item>
        <item>4.5 above</item>
        <item>4.0 to 4.5</item>
        <item>3.5 to 4.0</item>
        <item>3.0 to 3.5</item>
        <item>2.5 to 3.0</item>
        <item>2.0 to 2.5</item>
        <item>1.5 to 2.0</item>
        <item>1.0 to 1.5</item>
        <item>Below 1.0</item>
    </string-array>
    <string-array name="Languages">
        <item></item>
        <item>English</item>
        <item>Hindi</item>
        <item>Aragonese</item>
        <item>Akan</item>
        <item>Cree</item>
        <item>Azerbaijani</item>
        <item>Czech</item>
        <item>Afar</item>
        <item>Breton</item>
        <item>Afrikaans</item>
        <item>Tibetan</item>
        <item>Chechen</item>
        <item>Cornish</item>
        <item>Faroese</item>
        <item>Latin</item>
        <item>Ndonga</item>
        <item>Sardinian</item>
        <item>Tigrinya</item>
        <item>Tswana</item>
        <item>Turkish</item>
        <item>Punjabi</item>
        <item>Estonian</item>
        <item>French</item>
        <item>Hausa</item>
        <item>Icelandic</item>
    <item>Limburgish</item>
    <item>Lingala</item>
    <item>Swati</item>
    <item>Abkhazian</item>
    <item>Serbo-Croatian</item>
    <item>Basque</item>
    <item>Frisian</item>
    <item>Japanese</item>
    <item>Ojibwa</item>
    <item>Oriya</item>
    <item>Pali</item>
    <item>Sundanese</item>
    <item>Thai</item>
    <item>Igbo</item>
    <item>Indonesian</item>
    <item>Kazakh</item>
    <item>Kikuyu</item>
    <item>Uighur</item>
    <item>Venda</item>
    <item>Kinyarwanda</item>
    <item>Maori</item>
    <item>Navajo</item>

    <item>Portuguese</item>
    <item>Sango</item>
    <item>Slovak</item>
    <item>Serbian</item>
    <item>Tahitian</item>
    <item>Xhosa</item>
    <item>Arabic</item>
    <item>Corsican</item>
    <item>Bislama</item>
    <item>Esperanto</item>
    <item>Herero</item>
    <item>Finnish</item>
    <item>Inuktitut</item>
    <item>Latvian</item>
    <item>Italian</item>
    <item>Dutch</item>
    <item>Kannada</item>
    <item>Sanskrit</item>
    <item>Albanian</item>
    <item>Tagalog</item>
    <item>Letzeburgesch</item>
    <item>Tsonga</item>
    <item>Malayalam</item>
    <item>Volapük</item>
    <item>Zulu</item>
    <item>Ossetian; Ossetic</item>
    <item>Samoan</item>
    <item>Zhuang</item>
        <item>Bengali</item>
<item>Slavic</item>
<item>Irish</item>
<item>Manx</item>
<item>Hungarian</item>
<item>Javanese</item>
<item>Kanuri</item>
<item>Khmer</item>
<item>Kirghiz</item>
<item>Nauru</item>
<item>Ndebele</item>
<item>Occitan</item>
<item>Romanian</item>
<item>Russian</item>
<item>Armenian</item>
<item>Chamorro</item>
<item>No Language</item>
<item>Bashkir</item>
<item>Galician</item>
<item>Ido</item>
<item>Luba-Katanga</item>
<item>Marshall</item>
<item>Malagasy</item>
<item>Moldavian</item>
<item>Mongolian</item>
<item>Ndebele</item>
<item>Norwegian</item>
<item>Polish</item>
<item>Swahili</item>
<item>Tajik</item>
<item>Tonga</item>
<item>Walloon</item>
<item>Yiddish</item>

<item>Assamese</item>
<item>Gaelic</item>
<item>Kalaallisut</item>
<item>Burmese</item>
<item>Quechua</item>
<item>Shona</item>
<item>Ukrainian</item>
<item>Persian</item>
<item>Georgian</item>
<item>Gujarati</item>
<item>Avaric</item>
<item>Avestan</item>
<item>Guarani</item>
<item>Maltese</item>
<item>Nepali</item>
<item>Swedish</item>
<item>Tatar</item>
<item>Wolof</item>
<item>Cantonese</item>
<item>Chuvash</item>
<item>Danish</item>
<item>Dzongkha</item>
<item>Chichewa; Nyanja</item>
<item>Rundi</item>
<item>Sotho</item>
<item>Turkmen</item>
<item>Uzbek</item>
<item>Vietnamese</item>
<item>Greek</item>
<item>Catalan</item>
<item>Welsh</item>
<item>German</item>
<item>Kashmiri</item>
<item>Malay</item>
<item>Norwegian Bokmål</item>
<item>Raeto-Romance</item>
<item>Sinhalese</item>
<item>Spanish</item>
<item>Telugu</item>
<item>Twi</item>
<item>Pushto</item>
<item>Bulgarian</item>
<item>Macedonian</item>
<item>Inupiaq</item>
<item>Korean</item>
<item>Lithuanian</item>
<item>Oromo</item>
<item>Northern Sami</item>
<item>Somali</item>
<item>Tamil</item>
<item>Urdu</item>
<item>Amharic</item>
<item>Bosnian</item>
<item>Divehi</item>
<item>Aymara</item>
<item>Bambara</item>
<item>Yi</item>
<item>Interlingue</item>
<item>Komi</item>
<item>Kurdish</item>
<item>Norwegian Nynorsk</item>
<item>Mandarin</item>
<item>Hebrew</item>
<item>Ewe</item>
<item>Fijian</item>
<item>Fulah</item>
<item>Haitian; Haitian Creole</item>
<item>Croatian</item>
<item>Interlingua</item>
<item>Kuanyama</item>
<item>Lao</item>
<item>Ganda</item>
<item>Marathi</item>
<item>Sindhi</item>
<item>Belarusian</item>
<item>Malay</item>
<item>Romanian</item>
<item>Bosnian</item>
<item>Tonga</item>
<item>Irish</item>
<item>Kinyarwanda</item>
<item>Tuvalu</item>
<item>Kikuyu</item>
<item>Romanian</item>
<item>Czech</item>
<item>Chamorro</item>
<item>Indonesian</item>
<item>Kirghiz</item>
<item>Latvian</item>
<item>Luba-Katanga</item>
<item>Navajo</item>
<item>Swedish</item>
<item>Telugu</item>
<item>Burmese</item>
<item>Mongolian</item>
<item>Sichuan Yi</item>
<item>Tswana</item>
<item>Swahili</item>
<item>Uighur</item>
<item>Turkish</item>
<item>Ukrainian</item>
<item>Vietnamese</item>
<item>Volapük</item>
<item>Walloon</item>
<item>Wolof</item>
<item>Xhosa</item>
<item>Yoruba</item>
<item>Zhuang</item>

    </string-array>

    <string-array name="LangCodes">
        <item>en</item>
        <item>hi</item>
        <item>an</item>
        <item>ak</item>
        <item>cr</item>
        <item>az</item>
        <item>cs</item>
        <item>aa</item>
        <item>br</item>
        <item>af</item>
        <item>bo</item>
        <item>ce</item>
        <item>kw</item>
        <item>fo</item>
        <item>la</item>
        <item>ng</item>
        <item>sc</item>
        <item>ti</item>
        <item>tn</item>
        <item>tr</item>
        <item>pa</item>
        <item>et</item>
        <item>fr</item>
        <item>ha</item>
        <item>is</item>
        <item>li</item>
        <item>ln</item>
        <item>ss</item>
        <item>ab</item>
        <item>sh</item>
        <item>eu</item>
        <item>fy</item>
        <item>ja</item>
        <item>oj</item>
        <item>or</item>
        <item>pi</item>
        <item>su</item>
        <item>th</item>
        <item>ig</item>
        <item>id</item>
        <item>kk</item>
        <item>ki</item>
        <item>ug</item>
        <item>ve</item>
        <item>rw</item>
        <item>mi</item>
        <item>nv</item>

        <item>pt</item>
        <item>sg</item>
        <item>sk</item>
        <item>sr</item>
        <item>ty</item>
        <item>xh</item>
        <item>ar</item>
        <item>co</item>
        <item>bi</item>
        <item>eo</item>
        <item>hz</item>
        <item>fi</item>
        <item>iu</item>
        <item>lv</item>
        <item>it</item>
        <item>nl</item>
        <item>kn</item>
        <item>sa</item>
        <item>sq</item>
        <item>tl</item>
        <item>lb</item>
        <item>ts</item>
        <item>ml</item>
        <item>vo</item>
        <item>zu</item>
        <item>os</item>
        <item>sm</item>
        <item>za</item>
        <item>bn</item>
        <item>cu</item>
        <item>ga</item>
        <item>gv</item>
        <item>hu</item>
        <item>jv</item>
        <item>kr</item>
        <item>km</item>
        <item>ky</item>
        <item>na</item>
        <item>nr</item>
        <item>oc</item>
        <item>ro</item>
        <item>ru</item>
        <item>hy</item>
        <item>ch</item>
        <item>xx</item>
        <item>ba</item>
        <item>gl</item>
        <item>io</item>
        <item>lu</item>
        <item>mh</item>
        <item>mg</item>
        <item>mo</item>
        <item>mn</item>
        <item>nd</item>
        <item>no</item>
        <item>pl</item>
        <item>sw</item>
        <item>tg</item>
        <item>to</item>
        <item>wa</item>
        <item>yi</item>

        <item>as</item>
        <item>gd</item>
        <item>kl</item>
        <item>my</item>
        <item>qu</item>
        <item>sn</item>
        <item>uk</item>
        <item>fa</item>
        <item>ka</item>
        <item>gu</item>
        <item>av</item>
        <item>ae</item>
        <item>gn</item>
        <item>mt</item>
        <item>ne</item>
        <item>sv</item>
        <item>tt</item>
        <item>wo</item>
        <item>cn</item>
        <item>cv</item>
        <item>da</item>
        <item>dz</item>
        <item>ny</item>
        <item>rn</item>
        <item>st</item>
        <item>tk</item>
        <item>uz</item>
        <item>vi</item>
        <item>el</item>
        <item>ca</item>
        <item>cy</item>
        <item>de</item>
        <item>ks</item>
        <item>ms</item>
        <item>nb</item>
        <item>rm</item>
        <item>si</item>
        <item>es</item>
        <item>te</item>
        <item>tw</item>
        <item>ps</item>
        <item>bg</item>
        <item>mk</item>
        <item>ik</item>
        <item>ko</item>
        <item>lt</item>
        <item>om</item>
        <item>se</item>
        <item>so</item>
        <item>ta</item>
        <item>ur</item>
        <item>am</item>
        <item>bs</item>
        <item>dv</item>
        <item>ay</item>
        <item>bm</item>
        <item>ii</item>
        <item>ie</item>
        <item>kv</item>
        <item>ku</item>
        <item>nn</item>
        <item>zh</item>
        <item>he</item>
        <item>ee</item>
        <item>fj</item>
        <item>ff</item>
        <item>ht</item>
        <item>hr</item>
        <item>ia</item>
        <item>kj</item>
        <item>lo</item>
        <item>lg</item>
        <item>mr</item>
        <item>sd</item>
        <item>be</item>
        <item>ho</item>
        <item>kg</item>
        <item>sl</item>
        <item>yo</item>

    </string-array>


</resources>